--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
                 <div class="btn-Join rounded-pill">Join Now</div>
             </div>
-            <div class="col">
+            <div class="col d-flex">
                 <img class="screen" src="assets/screen.png" alt="">
             </div>
         </div>
@@ -115,7 +115,7 @@
             <p class="text-uppercase monent">monentize your passion</p>
             <p class="text-uppercase h1 fw-bold">Influencers</p>
         </div>
-        <div class="row influ-body justify-content-center mt-4">
+        <div class="row influ-body justify-content-center mt-4 mx-3">
             <div class="col-12 col-md-6 c-main">
                 <div class="b-1">
                     <img class="" src="assets/logo 2.png" alt="Bootstrap" width="30" height="24">
