--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>UBA</title>
 </head>
 
-<body>
+<body style="overflow-x: hidden;">
+    <div class="splachsceen " id="splashscreen">
+        <div class="lds-hourglass"></div>
+    </div>
     <header class="main-head position-relative overflow-hidden bg-3 mb-lg-5">
         <!-- Nav Start -->
         <nav class="navbar navbar-expand-lg">
@@ -75,14 +79,14 @@
         <!-- section Header Start -->
         <div class="container">
             <div class="row section-header position-absolute">
-                <div class="col-12 col-lg ushering px-3">
+                <div class="col-12 col-lg ushering px-3" data-aos="fade-left">
                     <h1>Start Ushering & <br> Modeling</h1>
                     <p>Upaegypt.com is the first data driven influencer marketing platform in Egypt,
                         connecting brands-
                         agencies with a wide range of influencers</p>
                     <div class="rounded-3 btnbtnUSHERING">START USHERING</div>
                 </div>
-                <div class="col d-none d-lg-block phone-main">
+                <div class="col d-none d-lg-flex phone-main justify-content-center" data-aos="fade-right">
                     <img class="phone" src="assets/phone.png" alt="">
                 </div>
             </div>
@@ -93,7 +97,7 @@
     <!-- Section About App Start -->
     <div class="container">
         <div class="row section-aboutapp">
-            <div class="col-12 col-lg About-all">
+            <div class="col-12 col-lg About-all"data-aos="fade-left">
                 <p class="about-p">About App</p>
                 <h1 class="about-h1"> BRANDS & AGENCIES </h1>
                 <p class="main-p">Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -103,7 +107,7 @@
 
                 <div class="btn-Join rounded-pill">Join Now</div>
             </div>
-            <div class="col d-flex">
+            <div class="col d-flex " data-aos="fade-right">
                 <img class="screen" src="assets/screen.png" alt="">
             </div>
         </div>
@@ -116,7 +120,7 @@
             <p class="text-uppercase h1 fw-bold">Influencers</p>
         </div>
         <div class="row influ-body justify-content-center mt-4 mx-3">
-            <div class="col-12 col-md-6 c-main">
+            <div class="col-12 col-md-6 c-main" data-aos="fade-right">
                 <div class="b-1">
                     <img class="" src="assets/logo 2.png" alt="Bootstrap" width="30" height="24">
                     <div class="h5 fw-bold">Browse & Apply</div>
@@ -126,7 +130,7 @@
 
                 </div>
             </div>
-            <div class="col-12 col-md-6 c-main">
+            <div class="col-12 col-md-6 c-main" data-aos="fade-left">
                 <div class="b-2">
                     <img class="" src="assets/logo 2.png" alt="Bootstrap" width="30" height="24">
                     <div class="h5 fw-bold">Chat</div>
@@ -136,7 +140,7 @@
 
                 </div>
             </div>
-            <div class="col-12 col-md-6 c-main">
+            <div class="col-12 col-md-6 c-main" data-aos="fade-right">
                 <div class="b-3">
                     <img class="" src="assets/logo 2.png" alt="Bootstrap" width="30" height="24">
                     <div class="h5 fw-bold">Campaign Management</div>
@@ -146,7 +150,7 @@
 
                 </div>
             </div>
-            <div class="col-12 col-md-6 c-main">
+            <div class="col-12 col-md-6 c-main " data-aos="fade-left">
                 <div class="b-4">
                     <img class="" src="assets/logo 2.png" alt="Bootstrap" width="30" height="24">
                     <div class="h5 fw-bold">Hassle Free Payment</div>
@@ -164,7 +168,7 @@
     <div class="foot-bg  overflow-hidden">
         <div class="container">
             <div class="row mt-5 footbody align-items-center">
-                <div class="col-12 col-md-6 first-col">
+                <div class="col-12 col-md-6 first-col" data-aos="fade-right">
                     <div class="Download">
                         <div class="btn-Join rounded-pill">Download</div>
                     </div>
@@ -174,11 +178,11 @@
                         Explicabo earum commodi nobis delectus
                         consectetur possimus officiis quaerat, cumque magnam maiores?</p>
                     <div class="d-flex flex-row gap-4">
-                        <img src="assets/google.png" alt="google" width="100" height="40">
-                        <img src="assets/appstore.png" alt="appstore" width="100" height="40">
+                        <img src="assets/google.png" alt="google" width="140" height="50">
+                        <img src="assets/appstore.png" alt="appstore" width="140" height="50">
                     </div>
                 </div>
-                <div class="col-12 col-md-6 first-col">
+                <div class="col-12 col-md-6 first-col" data-aos="fade-left">
                     <p class="News h4 mt-3 mb-3 ">Newsletter</p>
                     <p class="NewsLore m-lg-auto mb-lg-3 mx-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                         Explicabo earum commodi nobis delectus
@@ -192,7 +196,12 @@
         </div>
     </div>
     <!-- Section Footer End -->
-
+  
+      <script src="js/script.js"></script>
+      <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+      <script>
+        AOS.init();
+      </script>
     <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 
