--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
     <title>UBA</title>
 </head>
 
-<body style="overflow-x: hidden;">
-    <div class="splachsceen " id="splashscreen">
-        <div class="lds-hourglass"></div>
-    </div>
+<body>
+ 
     <header class="main-head position-relative overflow-hidden bg-3 mb-lg-5">
         <!-- Nav Start -->
         <nav class="navbar navbar-expand-lg">
@@ -197,7 +195,6 @@
     </div>
     <!-- Section Footer End -->
   
-      <script src="js/script.js"></script>
       <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
       <script>
         AOS.init();
