--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>UBA</title>
 </head>
 
-<body>
+<body style="overflow-x:hidden;">
  
     <header class="main-head position-relative overflow-hidden bg-3 mb-lg-5">
         <!-- Nav Start -->
