--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>UBA</title>
 </head>
 
-<body style="overflow-x: hidden;">
+<body>
     
     <!-- Header Start -->
     <header class="main-head position-relative overflow-hidden bg-3 mb-lg-5">
