--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <!-- Section About App Start -->
     <div class="container">
         <div class="row section-aboutapp">
-            <div class="col-12 col-lg About-all"data-aos="fade-left">
+            <div class="col-12 col-lg About-all"data-aos="fade-up">
                 <p class="about-p">About App</p>
                 <h1 class="about-h1"> BRANDS & AGENCIES </h1>
                 <p class="main-p">Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -107,7 +107,7 @@
 
                 <div class="btn-Join rounded-pill">Join Now</div>
             </div>
-            <div class="col d-flex " data-aos="fade-right">
+            <div class="col d-flex " data-aos="fade-down">
                 <img class="screen" src="assets/screen.png" alt="">
             </div>
         </div>
@@ -120,7 +120,7 @@
             <p class="text-uppercase h1 fw-bold">Influencers</p>
         </div>
         <div class="row influ-body justify-content-center mt-4 mx-3">
-            <div class="col-12 col-md-6 c-main" data-aos="fade-right">
+            <div class="col-12 col-md-6 c-main" data-aos="fade-up-right">
                 <div class="b-1">
                     <img class="" src="assets/logo 2.png" alt="Bootstrap" width="30" height="24">
                     <div class="h5 fw-bold">Browse & Apply</div>
@@ -130,7 +130,7 @@
 
                 </div>
             </div>
-            <div class="col-12 col-md-6 c-main" data-aos="fade-left">
+            <div class="col-12 col-md-6 c-main" data-aos="fade-up-left">
                 <div class="b-2">
                     <img class="" src="assets/logo 2.png" alt="Bootstrap" width="30" height="24">
                     <div class="h5 fw-bold">Chat</div>
@@ -140,7 +140,7 @@
 
                 </div>
             </div>
-            <div class="col-12 col-md-6 c-main" data-aos="fade-right">
+            <div class="col-12 col-md-6 c-main" data-aos="fade-down-right">
                 <div class="b-3">
                     <img class="" src="assets/logo 2.png" alt="Bootstrap" width="30" height="24">
                     <div class="h5 fw-bold">Campaign Management</div>
@@ -150,7 +150,7 @@
 
                 </div>
             </div>
-            <div class="col-12 col-md-6 c-main " data-aos="fade-left">
+            <div class="col-12 col-md-6 c-main " data-aos="fade-down-left">
                 <div class="b-4">
                     <img class="" src="assets/logo 2.png" alt="Bootstrap" width="30" height="24">
                     <div class="h5 fw-bold">Hassle Free Payment</div>
@@ -168,7 +168,7 @@
     <div class="foot-bg  overflow-hidden">
         <div class="container">
             <div class="row mt-5 footbody align-items-center">
-                <div class="col-12 col-md-6 first-col" data-aos="fade-right">
+                <div class="col-12 col-md-6 first-col" data-aos="flip-left">
                     <div class="Download">
                         <div class="btn-Join rounded-pill">Download</div>
                     </div>
@@ -182,7 +182,7 @@
                         <img src="assets/appstore.png" alt="appstore" width="140" height="50">
                     </div>
                 </div>
-                <div class="col-12 col-md-6 first-col" data-aos="fade-left">
+                <div class="col-12 col-md-6 first-col" data-aos="flip-right">
                     <p class="News h4 mt-3 mb-3 ">Newsletter</p>
                     <p class="NewsLore m-lg-auto mb-lg-3 mx-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                         Explicabo earum commodi nobis delectus
