--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    
+
     <!-- Header Start -->
     <header class="main-head position-relative overflow-hidden bg-3 mb-lg-5">
         <!-- Nav Start -->
@@ -79,10 +79,10 @@
         <div class="container">
             <div class="row section-header position-absolute">
                 <div class="col-12 col-lg ushering px-3" data-aos="fade-left">
-                    <h1>Start Ushering & <br> Modeling</h1>
-                    <p>Upaegypt.com is the first data driven influencer marketing platform in Egypt,
-                        connecting brands-
-                        agencies with a wide range of influencers</p>
+                    <h1>Join the Ushering and <br> Modeling Evolution! </h1>
+                    <h6>Our data-driven influencer marketing platform is the first of its kind in Egypt, connecting top
+                        brands and agencies with a diverse range of talented influencers. Join our community and
+                        !start making your mark on the world of events today</p>
                     <div class="rounded-3 btnbtnUSHERING">START USHERING</div>
                 </div>
                 <div class="col d-none d-lg-flex phone-main justify-content-center" data-aos="fade-right">
@@ -97,12 +97,12 @@
     <!-- Section About App Start -->
     <div class="container">
         <div class="row section-aboutapp">
-            <div class="col-12 col-lg About-all"data-aos="fade-up">
+            <div class="col-12 col-lg About-all" data-aos="fade-up">
                 <p class="about-p">About App</p>
-                <h1 class="about-h1"> BRANDS & AGENCIES </h1>
-                <p class="main-p">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Iure facilis totam excepturi molestiae
-                    dolores, corporis ratione odio alias ea officiis?
+                <h1 class="about-h1"> Take a closer look at UPA </h1>
+                <p class="main-p">We built it because we Had to
+                    UPA app is revolutionizing the world of events in Egypt. UPA professional ushers, models,
+                    .and clients needed solutions we couldn't find anywhere else
                 </p>
 
                 <div class="btn-Join rounded-pill">Join Now</div>
@@ -122,41 +122,52 @@
         <div class="row influ-body justify-content-center mt-4 mx-3">
             <div class="col-12 col-md-6 c-main" data-aos="fade-up-right">
                 <div class="b-1">
-                    <img class="" src="assets/logo 2.png" alt="Bootstrap" width="30" height="24">
-                    <div class="h5 fw-bold">Browse & Apply</div>
-                    <p class="ppp">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                        Quae odio aperiam natus necessitatibus
-                        at error similique fugiat, quaerat ex beatae?</p>
+                    <div class="bgimg">
+                        <img class="" src="assets/Group21.png" alt="Bootstrap" width="40" height="30">
+                    </div>
+                    <div class="h5 fw-bold">Browse & Apply with Ease: </div>
+                    <p class="ppp"> Our advanced search filters make finding the perfect gig a
+                        breeze. Simply filter by industry, location, or job type to discover opportunities that match
+                        .your skill set and apply with just a few clicks
+                        </p>
 
                 </div>
             </div>
             <div class="col-12 col-md-6 c-main" data-aos="fade-up-left">
                 <div class="b-2">
-                    <img class="" src="assets/logo 2.png" alt="Bootstrap" width="30" height="24">
-                    <div class="h5 fw-bold">Chat</div>
-                    <p class="ppp">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                        Quae odio aperiam natus necessitatibus
-                        at error similique fugiat, quaerat ex beatae?</p>
+                    <div class="bgimg">
+                        <img class="" src="assets/Group18.png" alt="Bootstrap" width="40" height="30">
+                    </div>
+                    <div class="h5 fw-bold">Chat: </div>
+                    <p class="ppp">Connect with clients instantly through our in-app chat feature and turn your passion
+                        into profit by discussing project details, negotiating rates, and finalizing bookings all in one
+                        .convenient place</p>
 
                 </div>
             </div>
             <div class="col-12 col-md-6 c-main" data-aos="fade-down-right">
                 <div class="b-3">
-                    <img class="" src="assets/logo 2.png" alt="Bootstrap" width="30" height="24">
-                    <div class="h5 fw-bold">Campaign Management</div>
-                    <p class="ppp">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                        Quae odio aperiam natus necessitatibus
-                        at error similique fugiat, quaerat ex beatae?</p>
+                    <div class="bgimg">
+                        <img class="" src="assets/Group22.png" alt="Bootstrap" width="40" height="30">
+                    </div>
+                    <div class="h5 fw-bold">Campaign Management Made Simple: </div>
+                    <p class="ppp">Manage your projects and track your progress
+                        seamlessly with our user-friendly campaign management tool. Keep tabs on important
+                        .deadlines, submit deliverables, and collaborate with clients in real time
+                        </p>
 
                 </div>
             </div>
             <div class="col-12 col-md-6 c-main " data-aos="fade-down-left">
                 <div class="b-4">
-                    <img class="" src="assets/logo 2.png" alt="Bootstrap" width="30" height="24">
-                    <div class="h5 fw-bold">Hassle Free Payment</div>
-                    <p class="ppp">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                        Quae odio aperiam natus necessitatibus
-                        at error similique fugiat, quaerat ex beatae?</p>
+                    <div class="bgimg">
+                        <img class="" src="assets/Group23.png" alt="Bootstrap" width="40" height="30">
+                    </div>
+                    <div class="h5 fw-bold">Hassle-Free Payment</div>
+                    <p class="ppp">: Say goodbye to the hassle of invoicing and waiting for payment. Our
+                        secure and reliable payment system ensures you get paid on time, every time, without any
+                        headaches or stress
+                        ?</p>
 
                 </div>
             </div>
@@ -170,13 +181,11 @@
             <div class="row mt-5 footbody align-items-center">
                 <div class="col-12 col-md-6 first-col" data-aos="flip-left">
                     <div class="Download">
-                        <div class="btn-Join rounded-pill">Download</div>
+                        <div class="btn-Join rounded-pill">Download NOW</div>
                     </div>
                     <p class="down">Download The Lastest</p>
                     <p class="Vers">Version Of Our App</p>
-                    <p class="Lore m-lg-auto mb-lg-3 mx-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                        Explicabo earum commodi nobis delectus
-                        consectetur possimus officiis quaerat, cumque magnam maiores?</p>
+                    <p class="Lore m-lg-auto mb-lg-3 mx-3">Don't wait to access the biggest network of top talent and opportunities - join UPA today.</p>
                     <div class="d-flex flex-row gap-4">
                         <img src="assets/google.png" alt="google" width="140" height="50">
                         <img src="assets/appstore.png" alt="appstore" width="140" height="50">
@@ -184,9 +193,7 @@
                 </div>
                 <div class="col-12 col-md-6 first-col" data-aos="flip-right">
                     <p class="News h4 mt-3 mb-3 ">Newsletter</p>
-                    <p class="NewsLore m-lg-auto mb-lg-3 mx-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                        Explicabo earum commodi nobis delectus
-                        consectetur possimus officiis quaerat, cumque magnam maiores?</p>
+                    <p class="NewsLore m-lg-auto mb-lg-3 mx-3">Don't wait to access the biggest network of top talent and opportunities - join UPA today.</p>
                     <div class="input">
                         <input class="rounded-pill newsletter " type="text" placeholder="Abc123@gmail.com">
                         <img class="img" src="assets/iocn5.png" width="20" height="15" alt="">
@@ -196,11 +203,11 @@
         </div>
     </div>
     <!-- Section Footer End -->
-  
-      <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-      <script>
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
         AOS.init();
-      </script>
+    </script>
     <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 
