--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <a class="nav-link btn-login rounded-pill px-4" href="pages/blog.html">Blog</a>
                     </li>
                     <li class="nav-item mx-3">
-                        <a class="nav-link btn-Usher  rounded-pill px-4" href="#">Register</a>
+                        <a class="nav-link btn-Usher  rounded-pill px-4" href="pages/SignUp.html">Register</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link btn-Brans rounded-pill px-4" href="#">Login</a>
@@ -65,7 +65,7 @@
                                     <a class="nav-link" href="#">Log in</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Sign up Usher</a>
+                                    <a class="nav-link" href="pages/SignUp.html">Register</a>
                                 </li>
                             </ul>
                             <div class="my-1 d-flex flex-column justify-content-center align-items-center mt-3 mt-lg-5" style="
@@ -94,7 +94,7 @@
     <!-- Nav End -->
     <!-- section Header Start -->
     <div class="container">
-        <div class="row section-header position-absolute">
+        <div class="row section-header">
             <div class="col-12 col-lg ushering px-3" data-aos="fade-left">
                 <h1>Join the Ushering and <br> Modeling Evolution! </h1>
                 <h6>Our data-driven influencer marketing platform is the first of its kind in Egypt, connecting top
@@ -201,7 +201,7 @@
 </div>
 <!-- Section Influencers End -->
 <!-- Section Footer Start -->
-<div class="foot-bg  overflow-hidden">
+<div class="foot-bg">
     <div class="container">
         <div class="row mt-5 footbody align-items-center">
             <div class="col-12 col-lg-4 first-col" data-aos="flip-left">
@@ -226,7 +226,7 @@
                     <img class="img" src="assets/iocn5.png" width="20" height="15" alt="">
                 </div>
             </div>
-            <div class="col-12 col-lg-4 first-col" data-aos="flip-left">
+            <div class="col-12 col-lg-4 first-col" data-aos="flip-left" style="width: fit-content;">
                 <div class="quicklink">
                     <p class="h4 mt-3 mb-3 text-white fw-normal">Quick Link</p>
                 </div>
@@ -241,20 +241,14 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class="my-1 d-none flex-column justify-content-center align-items-center mt-3 mt-lg-5 d-lg-flex" style="
-    cursor: pointer;
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    ">
-    <div>
-        <img width="40px" src="assets/linkedin.svg" alt="linkedin">
-        <img class="mx-1" width="30px" src="assets/facebook.svg" alt="facebook">
-        <img width="36px" src="assets/instagram.svg" alt="instagram">
-    </div>
-        <p>&copy;2023 COPYRIGHT TRENDSTER LLC</p>
+        <div class="my-1 d-none flex-column justify-content-center align-items-center mt-3 mt-lg-5 d-lg-flex">
+            <div>
+                <img width="40px" src="assets/linkedin.svg" alt="linkedin">
+                <img class="mx-1" width="30px" src="assets/facebook.svg" alt="facebook">
+                <img width="36px" src="assets/instagram.svg" alt="instagram">
+            </div>
+            <p>&copy;2023 COPYRIGHT TRENDSTER LLC</p>
+        </div>
     </div>
 </div>
 <!-- Section Footer End -->
