--- a/index.html
+++ b/index.html
@@ -26,9 +26,6 @@
                     <li class="nav-item">
                         <a class="nav-link btn-login rounded-pill px-4" href="pages/blog.html">Blog</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link btn-login rounded-pill px-4" href="pages/PagePost.html">Single post</a>
-                    </li>
                     <li class="nav-item mx-3">
                         <a class="nav-link btn-Usher  rounded-pill px-4" href="pages/SignUp.html">Register</a>
                     </li>
@@ -61,7 +58,7 @@
                         <div class="offcanvas-body">
                             <ul class="navbar-nav fw-bold">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="pages/PagePost.html">Single post</a>
+                                    <a class="nav-link" href="pages/blog.html">Blog</a>
                                 </li>
                                 <hr>
                                 <li class="nav-item">
