--- a/pages/PagePost.html
+++ b/pages/PagePost.html
@@ -11,7 +11,7 @@
     <title>UBA | Post Name</title>
 </head>
 
-<body style="min-height: 1600px;">
+<body>
 
     <!-- Header Start -->
     <header class="main-head position-relative  bg-3 mb-lg-5">
@@ -125,13 +125,27 @@
                 <img class="img-fluid" src="../assets/pages/pagepost/postimg.png" alt="postimg">
             </div>
             <div class="row post px-2 py-4 mt-4 mb-3">
-                <div class="col-12 col-lg-8 shadow-lg right rounded-4 bg-white">
-                   1
+                <div class="col-12 col-lg-8 shadow-lg right rounded-4 bg-white py-3 px-4">
+                    <div class="Lima py-1 px-4">Lima</div>
+                    <div class="bodypost my-2">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit tenetur error, temporibus assumenda
+                        dolorem inventore ducimus totam perspiciatis soluta, quod necessitatibus ipsa rem quae? Iure,
+                        sed sapiente! Voluptatum, reprehenderit minima !Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit tenetur error, temporibus assumenda
+                        dolorem inventore ducimus totam perspiciatis soluta, quod necessitatibus ipsa rem quae? Iure,
+                        sed sapiente! Voluptatum, reprehenderit minima!
+                        !Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit tenetur error, temporibus assumenda
+                        dolorem inventore ducimus totam perspiciatis soluta, quod necessitatibus ipsa rem quae? Iure,
+                        sed sapiente! Voluptatum, reprehenderit minima!
+                        <img  class="img-fluid my-2" src="../assets/pages/pagepost/postbodyimg.png" alt="postbodyimg">
+                        <img  class="img-fluid my-2" src="../assets/pages/pagepost/postbodyimg.png" alt="postbodyimg">
+                    </div>
                 </div>
                 <div class="col-12 col-lg-4 left mt-3">
                     <div class="shadow-lg search  px-2 py-4 rounded-4">
-                        <input class="form-control rounded-pill p-2 text-white" type="text"
-                            placeholder="type to start search ..." name="" id="">
+                        <form action="" method="post">
+                            <input class="form-control rounded-pill p-2 text-white" type="search"
+                                placeholder="type to start search ...">
+                        </form>
                     </div>
                     <div class="shadow-lg social d-flex flex-column  px-2 py-4 rounded-4 mt-3">
                         <p class="h3">Social</p>
@@ -155,7 +169,8 @@
                                 <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line>
                             </svg>
                         </div>
-                        <div class="rounded-pill py-2 px-3 fw-semibold text-white  d-flex justify-content-center gap-3 linkedin">
+                        <div
+                            class="rounded-pill py-2 px-3 fw-semibold text-white  d-flex justify-content-center gap-3 linkedin">
                             <span>Linkedin</span>
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                 fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
@@ -168,7 +183,8 @@
                             </svg>
                         </div>
                     </div>
-                    <div class="shadow-lg recentpost  d-flex flex-column justify-content-centr px-2 py-4 rounded-4 mt-3">
+                    <div
+                        class="shadow-lg recentpost  d-flex flex-column justify-content-centr px-2 py-4 rounded-4 mt-3">
                         <p class="h3 text-center mb-3">Recent Post</p>
                         <div class="d-flex gap-2 my-2">
                             <img class="img-fluid rounded-circle" src="../assets/pages/pagepost/recentimg.png" alt="">
