--- a/pages/SignUp.html
+++ b/pages/SignUp.html
@@ -104,8 +104,8 @@
                         <div
                             class="position-relative rounded-pill sign-pill d-flex align-items-center justify-content-between px-0 py-0 fw-semibold text-black">
                             <div class="position-absolute animtion rounded-pill" id="animtion"></div>
-                            <div class="client rounded-pill col" id="client">Client</div>
-                            <div class="brand rounded-pill col px-3" id="brand">Asther/Model</div>
+                            <div class="client rounded-pill col p-2" id="client">Client</div>
+                            <div class="brand rounded-pill col p-2" id="brand">Asther/Model</div>
                         </div>
                 </div>
             </div>
