--- a/pages/SignUp.html
+++ b/pages/SignUp.html
@@ -30,7 +30,7 @@
                             <a class="nav-link btn-Usher  rounded-pill px-4" href="#">Register</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link btn-Brans rounded-pill px-4" href="#">Login</a>
+                            <a class="nav-link btn-Brans rounded-pill px-4" href="login.html">Login</a>
                         </li>
                     </ul>
                 </div>
@@ -62,7 +62,7 @@
                                     </li>
                                     <hr>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#">Log in</a>
+                                        <a class="nav-link" href="login.html">Login</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="SignUp.html">Register</a>
