--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <a class="nav-link btn-Usher  rounded-pill px-4" href="pages/SignUp.html">Register</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link btn-Brans rounded-pill px-4" href="#">Login</a>
+                        <a class="nav-link btn-Brans rounded-pill px-4" href="pages/login.html">Login</a>
                     </li>
                 </ul>
             </div>
@@ -62,7 +62,7 @@
                                 </li>
                                 <hr>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Log in</a>
+                                    <a class="nav-link" href="./pages/login.html">Login</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="pages/SignUp.html">Register</a>
@@ -195,7 +195,7 @@
     
                 </div>
             </div>
-            <div><a class="nav-link btn-login rounded-pill px-4 mx-auto fw-bold" href="#">Join NOW</a></div>
+            <div><a class="nav-link btn-login rounded-pill px-4 mx-auto fw-bold" href="./pages/SignUp.html">Join NOW</a></div>
         </div></div>
     </div>
 </div>
@@ -230,14 +230,14 @@
                 <div class="quicklink">
                     <p class="h4 mt-3 mb-3 text-white fw-normal">Quick Link</p>
                 </div>
-                <div class="text-white">
+                <!-- <div class="text-white">
                     About Us
+                </div> -->
+                <div class="text-white">
+                  <a href="./pages/privacy_policy.html" class="text-white fw-semibold text-uppercase  text-decoration-none  " >Privacy Policy</a>   
                 </div>
                 <div class="text-white">
-                    Privacy Policy
-                </div>
-                <div class="text-white">
-                    Tems
+                    <a href="pages/temp.html" class="text-white fw-semibold  text-uppercase text-decoration-none  ">  Tems  </a>   
                 </div>
             </div>
         </div>
