--- a/pages/blog.html
+++ b/pages/blog.html
@@ -31,7 +31,7 @@
                             <a class="nav-link btn-Usher  rounded-pill px-4" href="SignUp.html">Register</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link btn-Brans rounded-pill px-4" href="#">Login</a>
+                            <a class="nav-link btn-Brans rounded-pill px-4" href="login.html">Login</a>
                         </li>
                     </ul>
                 </div>
@@ -62,7 +62,7 @@
                                     </li>
                                     <hr>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#">Log in</a>
+                                        <a class="nav-link" href="login.html">Login</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="SignUp.html">Register</a>
@@ -100,12 +100,12 @@
         <div class="sectionBlog">
             <div class="row gap-5 row-cols-1 row-cols-md-3 row-cols-lg-4 justify-content-center">
                 <div class="col">
-                    <div class="card rounded-5 text-center mx-auto">
+                    <div class="card rounded-5 text-center mx-auto" >
                         <img src="../assets/pages/blog/man_1.png" alt="man_1" class="card-img-top">
                         <div class="card-body position-relative">
                             <p class="badge rounded-pill px-4 ">William</p>
                             <p class="date m-0 fw-semibold">&#128197; may 1, 2023</p>
-                            <a href="#" class="text-black fw-semibold  card-title">Must Follw Egyption <br> fitness
+                            <a href="PagePost.html" class="text-black fw-semibold  card-title">Must Follw Egyption <br> fitness
                                 Lnfluencers</a>
                             <div class="card-text fw-semibold last-text">Lorem ipsum dolor sit amet, consectetur
                                 adipisicing elit. Eligendi
@@ -143,7 +143,7 @@
                         <div class="card-body position-relative">
                             <p class="badge rounded-pill px-4 ">William</p>
                             <p class="date m-0 fw-semibold">&#128197; may 1, 2023</p>
-                            <a href="#" class="text-black fw-semibold  card-title">Must Follw Egyption <br> fitness
+                            <a href="PagePost.html" class="text-black fw-semibold  card-title">Must Follw Egyption <br> fitness
                                 Lnfluencers</a>
                             <div class="card-text fw-semibold last-text">Lorem ipsum dolor sit amet, consectetur
                                 adipisicing elit. Eligendi
@@ -332,7 +332,7 @@
                         <img src="../assets/pages/blog/man_1.png" alt="man_1" class="card-img-top">
                         <div class="card-body position-relative">
                             <p class="badge rounded-pill px-4 ">William</p>
-                            <p class="date m-0 fw-semibold">&#128197; may 1, 2023</p>
+                            <p class="date m-0 fw-semibold fa fa-calendar"> may 1, 2023</p>
                             <a href="#" class="text-black fw-semibold  card-title">Must Follw Egyption <br> fitness
                                 Lnfluencers</a>
                             <div class="card-text fw-semibold last-text">Lorem ipsum dolor sit amet, consectetur
@@ -449,59 +449,59 @@
         </div>
     </div>
 
-
-    <!-- Section Footer Start -->
-    <div class="foot-bg">
-        <div class="container">
-            <div class="row mt-5 footbody align-items-center">
-                <div class="col-12 col-lg-4 first-col" data-aos="flip-left">
-                    <div class="Download">
-                        <div class="btn-Join rounded-pill">Download NOW</div>
-                    </div>
-                    <p class="down">Download The Lastest</p>
-                    <p class="Vers">Version Of Our App</p>
-                    <p class="Lore m-lg-auto mb-lg-3 mx-3">Don't wait to access the biggest network of top talent and
-                        opportunities - join UPA today.</p>
-                    <div class="d-flex flex-row gap-4">
-                        <img src="../assets/google.png" alt="google" width="140" height="50">
-                        <img src="../assets/appstore.png" alt="appstore" width="140" height="50">
-                    </div>
+<!-- Section Footer Start -->
+<div class="foot-bg">
+    <div class="container">
+        <div class="row mt-5 footbody align-items-center">
+            <div class="col-12 col-lg-4 first-col" data-aos="flip-left">
+                <div class="Download">
+                    <div class="btn-Join rounded-pill">Download NOW</div>
                 </div>
-                <div class="col-12 col-lg-4 first-col" data-aos="flip-right">
-                    <p class="News h4 mt-3 mb-3 ">Newsletter</p>
-                    <p class="NewsLore m-lg-auto mb-lg-3 mx-3">Don't wait to access the biggest network of top talent
-                        and opportunities - join UPA today.</p>
-                    <div class="input">
-                        <input class="rounded-pill newsletter " type="text" placeholder="Abc123@gmail.com">
-                        <img class="img" src="../assets/iocn5.png" width="20" height="15" alt="">
-                    </div>
-                </div>
-                <div class="col-12 col-lg-4 first-col" data-aos="flip-left" style="width: fit-content;">
-                    <div class="quicklink">
-                        <p class="h4 mt-3 mb-3 text-white fw-normal">Quick Link</p>
-                    </div>
-                    <div class="text-white">
-                        About Us
-                    </div>
-                    <div class="text-white">
-                        Privacy Policy
-                    </div>
-                    <div class="text-white">
-                        Tems
-                    </div>
+                <p class="down">Download The Lastest</p>
+                <p class="Vers">Version Of Our App</p>
+                <p class="Lore m-lg-auto mb-lg-3 mx-3">Don't wait to access the biggest network of top talent and
+                    opportunities - join UPA today.</p>
+                <div class="d-flex flex-row gap-4">
+                    <img src="../assets/google.png" alt="google" width="140" height="50">
+                    <img src="../assets/appstore.png" alt="appstore" width="140" height="50">
                 </div>
             </div>
-            <div class="my-1 d-none flex-column justify-content-center align-items-center mt-3 mt-lg-5 d-lg-flex">
-                <div>
-                    <img width="40px" src="../assets/linkedin.svg" alt="linkedin">
-                    <img class="mx-1" width="30px" src="../assets/facebook.svg" alt="facebook">
-                    <img width="36px" src="../assets/instagram.svg" alt="instagram">
+            <div class="col-12 col-lg-4 first-col" data-aos="flip-right">
+                <p class="News h4 mt-3 mb-3 ">Newsletter</p>
+                <p class="NewsLore m-lg-auto mb-lg-3 mx-3">Don't wait to access the biggest network of top talent
+                    and opportunities - join UPA today.</p>
+                <div class="input">
+                    <input class="rounded-pill newsletter " type="text" placeholder="Abc123@gmail.com">
+                    <img class="img" src="../assets/iocn5.png" width="20" height="15" alt="">
                 </div>
-                <p>&copy;2023 COPYRIGHT TRENDSTER LLC</p>
+            </div>
+            <div class="col-12 col-lg-4 first-col" data-aos="flip-left" style="width: fit-content;">
+                <div class="quicklink">
+                    <p class="h4 mt-3 mb-3 text-white fw-normal">Quick Link</p>
+                </div>
+                <!-- <div class="text-white">
+                    About Us
+                </div> -->
+                <div class="text-white">
+                  <a href="../pages/privacy_policy.html" class="text-white fw-semibold text-uppercase  text-decoration-none   " >Privacy Policy</a>   
+                </div>
+                <div class="text-white">
+                    <a href="../pages/temp.html" class="text-white fw-semibold  text-uppercase text-decoration-none  ">  Tems  </a>   
+                </div>
             </div>
         </div>
+        <div class="my-1 d-none flex-column justify-content-center align-items-center mt-3 mt-lg-5 d-lg-flex">
+            <div>
+                <img width="40px" src="../assets/linkedin.svg" alt="linkedin">
+                <img class="mx-1" width="30px" src="../assets/facebook.svg" alt="facebook">
+                <img width="36px" src="../assets/instagram.svg" alt="instagram">
+            </div>
+            <p>&copy;2023 COPYRIGHT TRENDSTER LLC</p>
+        </div>
     </div>
-    <!-- Section Footer End -->
+</div>
+<!-- Section Footer End -->
+
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
